# VisualUI

./: .gitignore  CMakeLists.txt  README.md  VisualUI.cmake
examples/ImageViewer/: CMakeLists.txt
examples/ImageViewer/res/: gresource.xml  resource.rc
examples/ImageViewer/res/icons/: open-file.emf  zoom-in.emf  zoom-out.emf  zoom-reset.emf
examples/ImageViewer/res/manifest/: ImageViewer.exe.manifest
examples/ImageViewer/res/styles/: styles.xml  themes.xml
examples/ImageViewer/src/: main.cpp  mainwindow.cpp  mainwindow.h  resource.h  ui_mainwindow.h  version.h
examples/TextViewer/: CMakeLists.txt
examples/TextViewer/res/: gresource.xml  resource.rc
examples/TextViewer/res/icons/: about.emf  about_dark.emf  logo.emf  logo_dark.emf  menu.emf  menu_dark.emf  not-found.emf  open-file.emf  open-file_dark.emf  save-file.emf  save-file_dark.emf  search.emf  search_dark.emf
examples/TextViewer/res/manifest/: TextViewer.exe.manifest
examples/TextViewer/res/styles/: styles.xml  themes.xml
examples/TextViewer/src/: main.cpp  mainwindow.cpp  mainwindow.h  resource.h  ui_mainwindow.h  version.h
lib/: README.txt
scripts/: build_linux.sh  build_windows.bat  build_windows_x64.bat  build_windows_x86.bat
src/common/: uicommon.cpp  uicommon.h  uidefines.h  uifilesystem.cpp  uifilesystem.h  uiplatformtypes.h  uiutils.cpp  uiutils.h
src/core/: uiapplication.cpp  uiapplication.h  uicursor.cpp  uicursor.h  uieventloop.cpp  uieventloop.h  uifontmetrics.cpp  uifontmetrics.h  uiobject.cpp  uiobject.h  uisignal.h  uithread.h  uitimer.cpp  uitimer.h  uixmldocument.cpp  uixmldocument.h  uixmlreader.cpp  uixmlreader.h
src/dialogs/: uidialog.cpp  uidialog.h  uifiledialog.cpp  uifiledialog.h  uipopupmessage.cpp  uipopupmessage.h
src/graphics/: uiconhandler.cpp  uiconhandler.h  uidraghandler.cpp  uidraghandler.h  uidrawingsurface.cpp  uidrawingsurface.h  uidrawningengine.cpp  uidrawningengine.h  uigeometryanimation.cpp  uigeometryanimation.h  uimetrics.cpp  uimetrics.h  uiopacityanimation.cpp  uiopacityanimation.h  uipalette.cpp  uipalette.h  uipixmap.cpp  uipixmap.h  uiscalaranimation.cpp  uiscalaranimation.h  uistyle.cpp  uistyle.h  uitooltiphandler.cpp  uitooltiphandler.h
src/layout/: uiboxlayout.cpp  uiboxlayout.h  uilayout.cpp  uilayout.h  uilayoutitem.cpp  uilayoutitem.h  uispacer.cpp  uispacer.h
src/widgets/: uiabstractbutton.cpp  uiabstractbutton.h  uiabstracteditcontrol.cpp  uiabstracteditcontrol.h  uiabstractpopup.cpp  uiabstractpopup.h  uiabstractscrollarea.cpp  uiabstractscrollarea.h  uiabstractwindow.cpp  uiabstractwindow.h  uibutton.cpp  uibutton.h  uicaption.cpp  uicaption.h  uicheckbox.cpp  uicheckbox.h  uicombobox.cpp  uicombobox.h  uilabel.cpp  uilabel.h  uilineedit.cpp  uilineedit.h  uilistview.cpp  uilistview.h  uimenu.cpp  uimenu.h  uiprogressbar.cpp  uiprogressbar.h  uiradiobutton.cpp  uiradiobutton.h  uiscrollarea.cpp  uiscrollarea.h  uiscrollbar.cpp  uiscrollbar.h  uitextedit.cpp  uitextedit.h  uitogglebutton.cpp  uitogglebutton.h  uitoolbutton.cpp  uitoolbutton.h  (+6 more)
src/widgets/linux/: gtkcaret.c  gtkcaret.h
